force-app/main/default/objects/Sales_Productivity_Snapshot__c/Sales_Productivity_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Monthly Sales Productivity Snapshot</description>
    <label>Sales Productivity Snapshot</label>
    <nameField>
        <label>Sales Productivity Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Productivity Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>