force-app/main/default/objects/Sales_Productivity_Snapshot__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>