force-app/main/default/objects/Sales_Productivity_Snapshot__c/fields/IntApp_630__c.field-meta.xml
<CustomField>
    <fullName>IntApp_630__c</fullName>
    <label>Intapp 680</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>