force-app/main/default/objects/Sales_Productivity_Snapshot__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <description>This is a place to store the opportunity owner name.</description>
    <inlineHelpText>This is a place to store the opportunity owner name.</inlineHelpText>
    <label>Opportunity Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>