force-app/main/default/objects/Sales_Productivity_Snapshot__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>We may offer one or more packages (for example, &quot;IB&quot; or &quot;IB for Lawyer Provisioning&quot;) for each product line (for example, &quot;Integration Builder&quot;). This field describes the overall product line.</description>
    <inlineHelpText>We may offer one or more packages (for example, &quot;IB&quot; or &quot;IB for Lawyer Provisioning&quot;) for each product line (for example, &quot;Integration Builder&quot;). This field describes the overall product line.</inlineHelpText>
    <label>Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>